herotitle y overflow fix

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -110,20 +110,26 @@
     /* background-color: red; */
     padding: 1rem;
     overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;    
+    flex-direction: column;
 }
 
 .HeroTitle {
     /* background: blue; */
     width: 100%;
-    height: 200px;
+    height: 250px;
 
-    font-size: 9vw;
+    font-size: clamp(20px, 9vw, 40px);
     font-family: 'Inter', sans-serif;
     font-weight: 700;
     text-align: center;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
+    max-width: 500px;
+    text-wrap: wrap;
 }
 
 .HeroSubtitle {
@@ -131,11 +137,14 @@
     width: 100%;
     height: 80px;
 
-    font-size: 3.5vw;
+    font-size: clamp(14px, 3.5vw, 18px);
     font-family: var(--font-space-grotesk);
     font-weight: 400;
     text-align: center;
     color: #999;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
 }
 
 .SolanaGradient {
